@@ -3,6 +3,8 @@ Compatibility extended to Arch Linux
 Compatibility extended to Raspbian Linux for Raspberry Pi
 Additional check for systems which use airmon-zc, now checks for ethtool to avoid errors
 Portuguese language translation added
+Auto-update can be disabled using a var (useful for repositories versions)
+Auto change language feature can be disabled using a var
 
 3.41
 Show network cards chipset while selecting interface
